[workspace]
members = ["hylo-core", "hylo-idl", "hylo-jupiter"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
homepage = "https://hylo.so"

[workspace.dependencies]
anyhow = "1.0.98"
anchor-lang = "=0.31.1"
hylo-fix = "0.4.2"
pyth-solana-receiver-sdk = "=1.0.1"
jupiter-amm-interface = "0.6.0"
proptest = "1.5.0"
rust_decimal = "1.37.2"
serde = "1.0.225"
hylo-core = { version = "0.2.0", path = "hylo-core" }
hylo-idl = { version = "0.2.0", path = "hylo-idl" }
solana-pubkey = "2.3"
solana-sdk-ids = "2.2"
spl-token-interface = "1.0"
spl-associated-token-account-interface = "1.0"
solana-instruction = "2.3"
const-crypto = "0.3"
solana-program-pack = "2.2"
