[package]
name = "hylo-idl"
version.workspace = true
edition.workspace = true
description = "Protocol IDL definitions"
license.workspace = true
homepage.workspace = true
include = ["idls/", "src/"]

[dependencies]
anchor-lang.workspace = true
const-crypto.workspace = true
solana-instruction.workspace = true
solana-pubkey.workspace = true
solana-sdk-ids.workspace = true
spl-associated-token-account-interface.workspace = true
spl-token-interface.workspace = true
