[package]
name = "hylo-jupiter"
version.workspace = true
edition.workspace = true
description = "Jupiter integration for Hylo Exchange and Stability Pool."
license.workspace = true
homepage.workspace = true

[dependencies]
anchor-lang.workspace = true
anyhow.workspace = true
hylo-core = { workspace = true, features = ["offchain"] }
hylo-fix.workspace = true
jupiter-amm-interface.workspace = true
pyth-solana-receiver-sdk.workspace = true
rust_decimal.workspace = true
solana-program-pack.workspace = true
spl-token-interface.workspace = true
